# raytracer

./: Cargo.toml
benches/: bench_hit.rs  bench_perlin.rs
src/: aabb.rs  aarect.rs  bvh.rs  camera.rs  constant_medium.rs  core.rs  hbox.rs  hitable.rs  hitable_list.rs  lib.rs  main.rs  material.rs  moving_sphere.rs  onb.rs  pdf.rs  perlin.rs  ray.rs  scene.rs  sphere.rs  texture.rs  util.rs  vec3.rs
src/output/: buckets.rs  error.rs  gui.rs  image.rs  mod.rs  ppm.rs
